--- a/assets/scss/objects/o-input.scss
+++ b/assets/scss/objects/o-input.scss
@@ -1,9 +1,11 @@
-// Input
-//
-// Markup:
-// <input type="text" placeholder="Value" class="o-input">
-//
-// Styleguide 4.30.
+/*
+Input
+
+Markup:
+<input type="text" placeholder="Value" class="o-input">
+
+Styleguide 4.30.
+*/
 
 .o-input {
   height: em($height--b);
