--- a/assets/scss/objects/o-submit.scss
+++ b/assets/scss/objects/o-submit.scss
@@ -1,9 +1,11 @@
-// Submit
-//
-// Markup:
-// <input type="submit" class="o-submit" value="Make it happen">
-//
-// Styleguide 4.34.
+/*
+Submit
+
+Markup:
+<input type="submit" class="o-submit" value="Make it happen">
+
+Styleguide 4.34.
+*/
 
 [class^="o-submit"],
 [class*=" o-submit"] {
