--- a/assets/scss/objects/o-textarea.scss
+++ b/assets/scss/objects/o-textarea.scss
@@ -1,9 +1,11 @@
-// Textarea
-//
-// Markup:
-// <textarea placeholder="A longer text." class="o-textarea"></textarea>
-//
-// Styleguide 4.31.
+/*
+Textarea
+
+Markup:
+<textarea placeholder="A longer text." class="o-textarea"></textarea>
+
+Styleguide 4.31.
+*/
 
 .o-textarea {
   width: 100%;
