--- a/assets/scss/objects/o-tooltip.scss
+++ b/assets/scss/objects/o-tooltip.scss
@@ -1,9 +1,11 @@
-// Tooltip
-//
-// Markup:
-// <abbr class="o-tooltip" title="Pretty nice, right?">Hover me, pretty please</abbr>
-//
-// Styleguide 4.6.
+/*
+Tooltip
+
+Markup:
+<abbr class="o-tooltip" title="Pretty nice, right?">Hover me, pretty please</abbr>
+
+Styleguide 4.6.
+*/
 
 .o-tooltip {
   position: relative;
