--- a/assets/scss/styleguide.scss
+++ b/assets/scss/styleguide.scss
@@ -33,9 +33,11 @@
 @import "styleguide/sg-swatch";
 @import "styleguide/sg-color";
 
-// Basics
-// 
-// Styleguide 1.
+/*
+Basics
+
+Styleguide 1.
+*/
 @import "styleguide/sg-unit";
 @import "styleguide/sg-ratio";
 @import "styleguide/sg-height";
