--- a/assets/scss/typography/t-text.scss
+++ b/assets/scss/typography/t-text.scss
@@ -1,13 +1,15 @@
-// Text size
-//
-// .t-text--lead - Large introductory text.
-// .t-text--small - Smaller text.
-// .t-text--tiny - Unimportant text.
-//
-// Markup:
-// <p class="{$modifiers}">A somewhat long and pretty readable paragraph.</p>
-//
-// Styleguide 3.3.
+/*
+Text size
+
+.t-text--lead - Large introductory text.
+.t-text--small - Smaller text.
+.t-text--tiny - Unimportant text.
+
+Markup:
+<p class="{$modifiers}">A somewhat long and pretty readable paragraph.</p>
+
+Styleguide 3.3.
+*/
 
 .t-text--lead {
   font-size: em($unit--l);
