--- a/assets/scss/layout/l-inline.scss
+++ b/assets/scss/layout/l-inline.scss
@@ -1,14 +1,16 @@
-// Inline
-//
-// Table-cell display to put things beside.
-//
-// Markup:
-// <div class="l-inline {$modifiers}">
-//   <div class="l-inline__cell">Text.</div>
-//   <div class="l-inline__cell">Another text.</div>
-// </div>
-//
-// Styleguide 2.2.
+/*
+Inline
+
+Table-cell display to put things beside.
+
+Markup:
+<div class="l-inline {$modifiers}">
+  <div class="l-inline__cell">Text.</div>
+  <div class="l-inline__cell">Another text.</div>
+</div>
+
+Styleguide 2.2.
+*/
 
 .l-inline__cell {
   text-align: center;
