--- a/assets/scss/objects/o-dotlist.scss
+++ b/assets/scss/objects/o-dotlist.scss
@@ -1,17 +1,19 @@
-// Dotlist
-//
-// .o-dotlist--inside - Dots inside.
-// .o-dotlist--outside - Dots outside.
-// .o-dotlist--inline - Inline-block display.
-//
-// Markup:
-// <ul class="{$modifiers}">
-//   <li>List item</li>
-//   <li>List item</li>
-//   <li>List item</li>
-// </ul>
-//
-// Styleguide 4.3.
+/*
+Dotlist
+
+.o-dotlist--inside - Dots inside.
+.o-dotlist--outside - Dots outside.
+.o-dotlist--inline - Inline-block display.
+
+Markup:
+<ul class="{$modifiers}">
+  <li>List item</li>
+  <li>List item</li>
+  <li>List item</li>
+</ul>
+
+Styleguide 4.3.
+*/
 
 [class^="o-dotlist--"],
 [class*=" o-dotlist--"] {
