--- a/assets/scss/objects/o-hero.scss
+++ b/assets/scss/objects/o-hero.scss
@@ -1,18 +1,20 @@
-// Hero
-//
-// .o-hero--basic - Image with an overlay text, height according to image.
-// .o-hero--full - Stretch to viewport height, fill with image.
-// .o-hero--center - Center the overlay.
-//
-// Markup:
-// <div class="{$modifiers}">
-//   <div class="o-hero__overlay">
-//     <div class="o-hero__content"><p>Hero overlay text.</p></div>
-//   </div>
-//   <img class="o-hero__image" src="http://unsplash.it/1280/800/?image=1" alt="Hero background">
-// </div>
-//
-// Styleguide 4.53.
+/*
+Hero
+
+.o-hero--basic - Image with an overlay text, height according to image.
+.o-hero--full - Stretch to viewport height, fill with image.
+.o-hero--center - Center the overlay.
+
+Markup:
+<div class="{$modifiers}">
+  <div class="o-hero__overlay">
+    <div class="o-hero__content"><p>Hero overlay text.</p></div>
+  </div>
+  <img class="o-hero__image" src="http://unsplash.it/1280/800/?image=1" alt="Hero background">
+</div>
+
+Styleguide 4.53.
+*/
 
 [class^="o-hero--"],
 [class*=" o-hero--"] {
