--- a/assets/scss/objects/o-icon-button.scss
+++ b/assets/scss/objects/o-icon-button.scss
@@ -1,14 +1,16 @@
-// Icon button
-//
-// .o-icon-button--big - Big icon size.
-// .o-icon-button--medium - Medium size.
-// .o-icon-button - Default size.
-// .o-icon-button--small - Small icon.
-//
-// Markup:
-// <a href="#" class="{$modifiers} ss-write"></a>
-//
-// Styleguide 4.21.
+/*
+Icon button
+
+.o-icon-button--big - Big icon size.
+.o-icon-button--medium - Medium size.
+.o-icon-button - Default size.
+.o-icon-button--small - Small icon.
+
+Markup:
+<a href="#" class="{$modifiers} ss-write"></a>
+
+Styleguide 4.21.
+*/
 
 [class^="o-icon-button"],
 [class*=" o-icon-button"] {
