--- a/assets/scss/objects/o-note.scss
+++ b/assets/scss/objects/o-note.scss
@@ -1,12 +1,14 @@
-// Note
-//
-// .o-note - Important message.
-// .o-note--positive - Success message.
-//
-// Markup:
-// <mark class="{$modifiers}">Look ma, here!</mark>
-//
-// Styleguide 4.5.
+/*
+Note
+
+.o-note - Important message.
+.o-note--positive - Success message.
+
+Markup:
+<mark class="{$modifiers}">Look ma, here!</mark>
+
+Styleguide 4.5.
+*/
 
 [class^="o-note"],
 [class*=" o-note"] {
