--- a/assets/scss/typography/t-link.scss
+++ b/assets/scss/typography/t-link.scss
@@ -1,16 +1,18 @@
-// Text link
-//
-// .t-link--white - Translucent on hover.
-// .t-link--light - Light color.
-// .t-link--dark - Dark color.
-//
-// Markup:
-// <a href="#" class="{$modifiers}">Anchor link</a>
-// <a href="#" class="{$modifiers} l-section--light">Anchor link</a>
-// <a href="#" class="{$modifiers} l-section--dark">Anchor link</a>
-// <a href="#" class="{$modifiers} l-section--black">Anchor link</a>
-//
-// Styleguide 3.4.
+/*
+Text link
+
+.t-link--white - Translucent on hover.
+.t-link--light - Light color.
+.t-link--dark - Dark color.
+
+Markup:
+<a href="#" class="{$modifiers}">Anchor link</a>
+<a href="#" class="{$modifiers} l-section--light">Anchor link</a>
+<a href="#" class="{$modifiers} l-section--dark">Anchor link</a>
+<a href="#" class="{$modifiers} l-section--black">Anchor link</a>
+
+Styleguide 3.4.
+*/
 
 .t-link--white {
   @include state--link {
