SCSS Removed @mixin stretch-overlay

--- a/app/assets/scss/objects/o-hero.scss
+++ b/app/assets/scss/objects/o-hero.scss
@@ -24,7 +24,7 @@ Styleguide 4.53.
 }
 
 .o-hero__overlay {
-  @include stretch-overlay;
+  @include position(absolute, 0 0 0 0);
   color: white;
   z-index: $index--b;
 }
