--- a/app/assets/scss/guide/g-temp.scss
+++ b/app/assets/scss/guide/g-temp.scss
@@ -31,7 +31,7 @@
 
 // Overlay.
 .g-overlay {
-  @include stretch-overlay;
+  @include position(absolute, 0 0 0 0);
   @include pseudo-center--parent;
 }
 
