--- a/app/assets/scss/mixins/_helpers.scss
+++ b/app/assets/scss/mixins/_helpers.scss
@@ -1,11 +1,3 @@
-@mixin stretch-overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
 @mixin text-ellipsis {
   overflow: hidden;
   white-space: nowrap;
@@ -13,11 +5,24 @@
 }
 
 @mixin collapse-children {
-  & > :first-child {margin-top: 0; }
-  & > :last-child {margin-bottom: 0; }
+  & > :first-child {
+    margin-top: 0;
+  }
+  & > :last-child {
+    margin-bottom: 0;
+  }
 }
 
 @mixin px-rem ($property, $value) {
   #{$property}: $value * $unit--b + px;
   #{$property}: #{$value}rem;
+}
+
+@mixin reset-list {
+  list-style-type: none;
+
+  padding-left: 0;
+
+  margin-top: 0;
+  margin-bottom: 0;
 }
