--- a/app/assets/scss/config/c-colors.scss
+++ b/app/assets/scss/config/c-colors.scss
@@ -1,11 +1,15 @@
-$hue-1: 170;
+$hue-1: 210;
+$hue-2: $hue-1 + 120;
 
 $neutral-1: 210;
 
 // Primary colors
-$color1--300: hsb($hue-1, 016, 095);
-$color1--500: hsb($hue-1, 085, 080);
-$color1--700: hsb($hue-1, 050, 065);
+$color1--300: hsb($hue-1, 015, 095);
+$color1--500: hsb($hue-1, 085, 085);
+$color1--700: hsb($hue-1, 080, 050);
+
+$color2--300: hsb($hue-2, 015, 095);
+$color2--500: hsb($hue-2, 085, 080);
 
 // Increments of 9, only B52 missing
 $grey--000: hsb($neutral-1, 02, 97);
