SCSS Updated style.scss

--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -62,6 +62,7 @@ Styleguide 4.
 @import "objects/o-button";
 @import "objects/o-button-group";
 @import "objects/o-dotlist";
+@import "objects/o-list";
 @import "objects/o-nav";
 @import "objects/o-note";
 @import "objects/o-tooltip";
@@ -83,3 +84,5 @@ Styleguide 4.
 @import "objects/o-hero";
 @import "objects/o-slider";
 @import "objects/o-carousel";
+
+@import "misc/temp";
