--- a/app/assets/scss/config/c-fonts.scss
+++ b/app/assets/scss/config/c-fonts.scss
@@ -11,7 +11,7 @@ $font__serif--regular: normal;
 $font__serif--bold: bold;
 
 // Defaults.
-$default__size: $unit--b;
+$default__size: $base-1;
 $default__family: $font__sans;
 $default__weight: $font__sans--regular;
 $default__leading: $spacing--b;
