--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -21,6 +21,7 @@ Config
 
 @import "vendor/neat";
 @import "vendor/featherlight";
+@import "vendor/smoothstate";
 @import "vendor/symbolset";
 @import "vendor/symbolset-custom";
 
