KSS Updated markup annotation in SCSS files

--- a/app/assets/scss/guide/g-height.scss
+++ b/app/assets/scss/guide/g-height.scss
@@ -9,7 +9,7 @@ Common block element heights. Perfect for buttons, inputs, forms etc.
 .g-height--small - Small height.
 
 Markup:
-<div class="{$modifiers}"></div>
+<div class="{{modifier_class}}"></div>
 
 Styleguide 1.3.
 */
