--- a/app/assets/scss/guide/g-spacing.scss
+++ b/app/assets/scss/guide/g-spacing.scss
@@ -9,7 +9,7 @@ Spacing
 .g-spacing--l - Big spacing.
 
 Markup:
-<span class="{$modifiers}">A rather long text that<br>looks great</span>
+<span class="{{modifier_class}}">A rather long text that<br>looks great</span>
 
 Styleguide 1.4.
 */
