--- a/app/assets/scss/layout/l-spacer.scss
+++ b/app/assets/scss/layout/l-spacer.scss
@@ -6,7 +6,7 @@ Spacer
 .l-spacer--small - Smaller margin.
 
 Markup:
-<hr class="{$modifiers}">
+<hr class="{{modifier_class}}">
 
 Styleguide 2.4.
 */
