--- a/app/assets/scss/objects/o-icon.scss
+++ b/app/assets/scss/objects/o-icon.scss
@@ -7,7 +7,7 @@ Icon
 .o-icon--small - Small icon.
 
 Markup:
-<span class="{$modifiers} ss-index"></span>
+<span class="{{modifier_class}} ss-index"></span>
 
 Styleguide 4.20.
 */
