--- a/app/assets/scss/typography/t-head.scss
+++ b/app/assets/scss/typography/t-head.scss
@@ -9,7 +9,7 @@ Headlines
 .t-head--bottom - Sixth headline. 
 
 Markup:
-<h1 class="{$modifiers}">Headline</h1>
+<h1 class="{{modifier_class}}">Headline</h1>
 
 Styleguide 3.1.
 */
