--- a/app/assets/scss/layout/l-wrap.scss
+++ b/app/assets/scss/layout/l-wrap.scss
@@ -11,7 +11,7 @@ Added offwhite background for styleguide purposes.
 .l-wrap--no-bottom - No bottom padding.
 
 Markup:
-<div class="l-wrap {$modifiers}">Text.</div>
+<div class="l-wrap {{modifier_class}}">Text.</div>
 
 Styleguide 2.1.
 */
